--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,210 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* background-color: #eee; */
+  background-color: #d1defa;
+  font-family: sans-serif, Arial, sans-serif;
+  text-align: center;
+  padding: 0px;
+  margin: 0px;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.layaout {
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-areas:
+    "header header header header"
+    "nav nav nav nav"
+    "content content content lateral"
+    "footer footer footer footer "
+
+  ;
+
+  grid-template-rows: 100px 70px auto 70px;
+}
+
+.header {
+  grid-area: header;
+  background-color: #eee;
+  text-align: left;
+  font-style: italic;
+  display: flex;
+  justify-content: center;
+
+}
+
+.logo {
+  background: linear-gradient(90deg, #03228f 10%, #0e73e4 100%);
+
+  width: 40px;
+  height: 40px;
+  border-radius: 300px;
+  margin-top: 30px;
+}
+
+.play {
+  width: 0;
+  height: 0;
+  margin-top: 15px;
+  margin-left: 16px;
+  border-left: 12px solid white;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+}
+
+.header h1 {
+  margin-left: 15px;
+  margin-top: 36px;
+}
+
+/* navegacion */
+
+.nav {
+  grid-area: nav;
+
+  background: linear-gradient(90deg, #03228f 10%, #0e73e4 100%);
+}
+
+.nav>ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  /* align-items: center; */
+
+}
+
+.nav a {
+  text-decoration: none;
+  color: #eee;
+  font-size: 18px;
+  font-weight: lighter;
+
+  margin-left: 27px;
+  margin-right: 27px;
+  line-height: 35px;
+  transition: all 300ms;
+}
+
+.nav a:hover {
+  text-decoration: underline;
+  transform: scale(1.1);
+
+}
+
+/* content  */
+.content {
+  grid-area: content;
+  background-color: #eee;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.peli-item {
+  /* flex-grow: 1; */
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 6px #ddd;
+  margin: 20px;
+  /* margin-left: 30px;
+  margin-right: 30px; */
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 25px;
+  padding-right: 25px;
+
+
+}
+
+button,
+input[type="submit"],
+input[type="button"] {
+  width: 100px;
+  background: #0b70e1;
+  /* background: linear-gradient(160deg, #03228f 0%, #0b70e1 77%); */
+  color: white;
+  border: 0;
+  padding: 12px;
+  text-align: center;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: all 300ms;
+}
+
+
+.edit:hover {
+  background-color: #e77b00;
+
+}
+
+.delete:hover {
+  background-color: #9b0202;
+}
+
+/* lateral */
+
+.lateral {
+  grid-area: lateral;
+
+  background-color: #eee;
+  border-left: 1px solid #ddd;
+}
+
+.lateral>div {
+  box-sizing: border-box;
+  width: 90%;
+  margin: 20px;
+  padding: 20px;
+  padding-top: 10px;
+  background-color: white;
+  border-radius: 9px;
+  box-shadow: 0px 0px 6px #ddd
+}
+
+.lateral input[type='text'],
+textarea {
+  display: block;
+  margin: 0 auto;
+  margin-top: 15px;
+  padding: 12px;
+  border-radius: 6px;
+
+  background-color: #f6f7f9;
+  width: 80%;
+  opacity: 4;
+  outline: 0;
+  border-color: transparent;
+  /* border: 0; */
+  margin-bottom: 6px;
+}
+
+.footer {
+  grid-area: footer;
+  background-color: #d1defa;
+  color: #454545;
+  border-top: 1px solid white;
+  text-align: left;
+  line-height: 68px;
+  padding-left: 25px;
+
+}
+
+.footer a {
+  text-decoration: none;
+  color: #0b70e1;
+}
+
+@media (max-width : 1085px) {
+  .content {
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .peli-item {
+    width: 80%;
+  }
+
+
 }
